# cpp-json-adapter

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  IJSONDocument.h  IJSONValue.h  README.md  RELEASENOTES.md  conanfile.py  vs2022.conanprofile
JSONAdapterInterface/: IJSONAdapter.h  IJSONDocument.h  IJSONMember.h  IJSONRemoteSchemaProvider.h  IJSONSchemaValidator.h  IJSONValue.h  conanfile.py
JSONAdapterTestUtilities/: CMakeLists.txt  JSONAdapterUtilities.cpp  JSONAdapterUtilities.h  README.md  conanfile.py  stdafx.h
JSONAdapterTestUtilities/Comparators/: JSONDocumentComparator.cpp  JSONValueComparator.cpp
JSONAdapterTestUtilities/Matchers/: SerializesToMatcher.h
JSONAdapterTestUtilities/Mocks/: MockJSONAdapter.cpp  MockJSONAdapter.h  MockJSONDocument.cpp  MockJSONDocument.h  MockJSONMember.cpp  MockJSONMember.h  MockJSONRemoteSchemaProvider.cpp  MockJSONRemoteSchemaProvider.h  MockJSONSchemaValidator.cpp  MockJSONSchemaValidator.h  MockJSONValue.cpp  MockJSONValue.h
ci/: deploy.sh
ci/pipelines/: Build.jenkinsfile  NewtonDebug.properties  NewtonRelease.properties  Release.jenkinsfile
cmake/: ConfigureGoogleTest.cmake
test_package/: CMakeLists.txt  JSONAdapterExample.cpp  conanfile.py
